Clear PMC and anything with nonessential cookies

--- a/_posts/2020-12-24-goals2021.md
+++ b/_posts/2020-12-24-goals2021.md
@@ -1,13 +1,12 @@
 ---
 layout: post
-title: "2021 ~Goals~ Principles"
+title: "2021 Principles"
 date: 2020-12-24 12:00:00
 categories: personal
 featured_image: /images/cover.jpg
 ---
 
 ## Principles > Goals  
-
 I've been thinking about why [setting goals](https://paper.dropbox.com/doc/Planning-2020--BB6TsO3lBSskSVrU4MkG14TgAQ-BC2RCXLU0JZMSqPG8fer4) last year wasn't particularly effective. Around the beginning of March 2021, I ran into the Investor's Field Guide ["Growth Without Goals"](https://investorfieldguide.com/growth-without-goals/) post (after finding ["Invest Like the Best"](https://investorfieldguide.com/podcast/). Check it out if you haven't already!). 
 
 The post made a lot of things click into place that hadn't before for me. Each year I would specify an outcome like gaining muscle, speaking at events, or finishing books. The carrot at the end of the stick was still a carrot, and not particularly enticing by comparison to the amount of effort required! I also hadn't spent much time learning about habit formation or adopting a personal philosophy of life (both stil WIP, with most knowledge coming from pop psycology). 
@@ -15,7 +14,6 @@ The post made a lot of things click into place that hadn't before for me. Each y
 Goals continued to be aspirational targets that didn't impact much of my day to day behavior. By comparison, in the last 4 months of 2021, I've made pretty considerable progress in terms of general day-to-day life satisfaction! I attribute a vast majority of that to the "Growth Without Goals" post.
 
 ## Continuous Success
-
 IMO the most important point of the post can be distilled to a single image. Primarily that you'll feel much happier and more 'succesful' sticking to a continual, daily practice without a large goalpost. When setting and hitting future goals, it's really 
 
 ![](https://investorfieldguide.com/wp-content/uploads/2016/08/continuous-success.png)
