Very rough draft of post sections

--- a/_posts/2020-12-24-goals2021.md
+++ b/_posts/2020-12-24-goals2021.md
@@ -14,12 +14,34 @@ The post made a lot of things click into place that hadn't before for me. Each y
 Goals continued to be aspirational targets that didn't impact much of my day to day behavior. By comparison, in the last 4 months of 2021, I've made pretty considerable progress in terms of general day-to-day life satisfaction! I attribute a vast majority of that to the "Growth Without Goals" post.
 
 ## Continuous Success
-IMO the most important point of the post can be distilled to a single image. Primarily that you'll feel much happier and more 'succesful' sticking to a continual, daily practice without a large goalpost. When setting and hitting future goals, it's really 
+IMO the most important point of the post can be distilled to a single image. Primarily that you'll feel much happier and more 'succesful' sticking to a continual, daily practice without a large goalpost. 
 
-![](https://investorfieldguide.com/wp-content/uploads/2016/08/continuous-success.png)
+{% include image.html url="https://investorfieldguide.com/wp-content/uploads/2016/08/continuous-success.png" description="" %}
+
+There's a single point in time when achieving a large goal where I feel happy and satisfied. When planning for these kinds of goals, there often isn't incentive to break them down into manageable chunks of work that make them achievable. This results in a self-defeating cycle where I pick something new and ambitious to do, perhaps make some traction on it over time, and don't feel all that great when crossing a particular milestone. Most of my goals also weren't particularyly intrinsic
+or data driven.
 
 ## Daily Habits
 
+Working off of the hypothesis that daily activities lead to a feeling of continued success, I've started to pick up a few key daily habits 
+
+{% include image.html 
+  url="/images/20201224/habit-tracker.png"
+  description="Daily habit tracking for the last three months"
+%}
+
+The habits themselves don't matter praticularly much at this stage, given I've never stuck to any form of daily ritual. The act of working to improve in the same areas each day continuously really contributes to my overall happiness. Even on days when things are hard, the habits are really beginning to stick. 
+
+Also it has resulted in accomplishments that seemed very out of reach by comparison to a few months ago! Can't remember the last time I read more than 10 books in 3 months.
+
 ## Principles
+
+With more of a foundation in place, I'm hoping to use the momentum to improve my quality of thought and decision making. The main areas of focus: 
+
+* Self-awareness: understanding that taking extra time to work on the right thing rather than burning energy on the wrong things generates the most value. I'd like to make a more tangible decision making framework around this (Ex: measuring required tasks at work, deciding which bits take the most time, and working to automate them). This should spill over more generally into other areas of life, most notably how I make time for others. More listening, less speaking!
+* Continued daily habits. Daily unguided meditation and breathwork has been the biggest generator of change so far this year. Hoping to keep this going alongisde daily exercise and building a muscle for continued learning. 
+* Take more risks! Doing more things that scare me than I currently do. Sending cold compliments to people I respect, publishing (poor) writing and getting feedback, and perhaps moving to a new part of the US. Discomfort should apply to my day to day activities rather than fantisizing about large goals (like speaking at large events).
+
+## On to 2021!
 
 I'm hoping publishing publicly will help to keep the momentum going in 2021! Given I'll hopefully be spending less time inside with predictable routines, keeping this going feels like an exciting challenge. 
