First draft iteration

--- a/_posts/2020-12-24-goals2021.md
+++ b/_posts/2020-12-24-goals2021.md
@@ -7,41 +7,45 @@ featured_image: /images/cover.jpg
 ---
 
 ## Principles > Goals  
-I've been thinking about why [setting goals](https://paper.dropbox.com/doc/Planning-2020--BB6TsO3lBSskSVrU4MkG14TgAQ-BC2RCXLU0JZMSqPG8fer4) last year wasn't particularly effective. Around the beginning of March 2021, I ran into the Investor's Field Guide ["Growth Without Goals"](https://investorfieldguide.com/growth-without-goals/) post (after finding ["Invest Like the Best"](https://investorfieldguide.com/podcast/). Check it out if you haven't already!). 
+As one does around the new year, I've been thinking about why [setting goals](https://paper.dropbox.com/doc/Planning-2020--BB6TsO3lBSskSVrU4MkG14TgAQ-BC2RCXLU0JZMSqPG8fer4) for this year wasn't particularly effective. Last year (and other years before it) I would specify an outcome like gaining X pounds of muscle, speaking at an event with Y attendees, or finishing Z books. While accomplishing a goal was a source of satisfaction, The carrot at the end of the stick was still a carrot. The incentive of accomplishing a goal for its own sake wasn't particularly enticing by comparison to the amount of effort required! I also hadn't spent much time learning about habit formation or adopting a personal philosophy of life (both stil WIP, with most knowledge still coming from pop psycology books and podcasts). 
 
-The post made a lot of things click into place that hadn't before for me. Each year I would specify an outcome like gaining muscle, speaking at events, or finishing books. The carrot at the end of the stick was still a carrot, and not particularly enticing by comparison to the amount of effort required! I also hadn't spent much time learning about habit formation or adopting a personal philosophy of life (both stil WIP, with most knowledge coming from pop psycology). 
+Around March, I started listening to the ["Invest Like the Best"](https://investorfieldguide.com/podcast/) podcast. It's definitely my favorite podcast of 2020 (if not of all time). Definitely reccomend giving it a listen (and the new sibling series "Founder's Field Guide") if you have a chance. The podcast host writes most of Investor's Field Guide, including the ["Growth Without Goals"](https://investorfieldguide.com/growth-without-goals/) post. It's short and in my opinion, life
+altering. 
 
-Goals continued to be aspirational targets that didn't impact much of my day to day behavior. By comparison, in the last 4 months of 2021, I've made pretty considerable progress in terms of general day-to-day life satisfaction! I attribute a vast majority of that to the "Growth Without Goals" post.
+The post caused me to think about goals in a way that I never had. Previously, goals were aspirational targets that didn't impact much of my day to day behavior. By comparison, in the last few months of 2020, I've made considerable progress in a few key areas. I'd go so far as saying I have improved general life satisfaction based on this post, even during what most certainly was the weirdest year of most of our lives (myself included).
 
 ## Continuous Success
-IMO the most important point of the post can be distilled to a single image. Primarily that you'll feel much happier and more 'succesful' sticking to a continual, daily practice without a large goalpost. 
+In my opinion, the most important point of the post is this image, conveying the idea that you'll feel much happier and more 'succesful' sticking to daily practices, rather than a large goalpost. 
 
-{% include image.html url="https://investorfieldguide.com/wp-content/uploads/2016/08/continuous-success.png" description="" %}
+{% include 
+  image.html 
+  url="https://investorfieldguide.com/wp-content/uploads/2016/08/continuous-success.png" 
+  description="Continuous Success: The Investor's Field Guide" %}
 
-There's a single point in time when achieving a large goal where I feel happy and satisfied. When planning for these kinds of goals, there often isn't incentive to break them down into manageable chunks of work that make them achievable. This results in a self-defeating cycle where I pick something new and ambitious to do, perhaps make some traction on it over time, and don't feel all that great when crossing a particular milestone. Most of my goals also weren't particularyly intrinsic
-or data driven.
+Adding to this point, there often isn't an incentive to break large goals down into manageable chunks of work. This contributes to a self-defeating cycle of picking something new and ambitious to do, perhaps making some traction on it over time, and not feeling that great when hitting a milestone. A "growth without goals" mindset can help to achieve more purely as a byproduct of doing more things of value, feeling better about the entire process along the way.
 
 ## Daily Habits
 
-Working off of the hypothesis that daily activities lead to a feeling of continued success, I've started to pick up a few key daily habits 
+Given the hypothesis that frequent (daily) activities lead to a feeling of continued success, I've started to pick up a few activities that hopefully morph into habits over time.
 
 {% include image.html 
   url="/images/20201224/habit-tracker.png"
   description="Daily habit tracking for the last three months"
 %}
 
-The habits themselves don't matter praticularly much at this stage, given I've never stuck to any form of daily ritual. The act of working to improve in the same areas each day continuously really contributes to my overall happiness. Even on days when things are hard, the habits are really beginning to stick. 
-
-Also it has resulted in accomplishments that seemed very out of reach by comparison to a few months ago! Can't remember the last time I read more than 10 books in 3 months.
+The habits themselves don't matter all that much to me at this stage, given I've never stuck to any form of daily ritual. The act of working to improve in the same areas each day continuously has been a source of happines in itself. Even on days when I don't feel particulary motivated to accomplish any of these. Also, the process has resulted in accomplishments that seemed out of reach by comparison to a few months ago! I can't remember the last time I read 10 books in 3 months.
 
 ## Principles
 
-With more of a foundation in place, I'm hoping to use the momentum to improve my quality of thought and decision making. The main areas of focus: 
+With some foundation in place, I'm hoping to use the momentum to improve my quality of thought and decision making in 2021. My main areas of focus: 
 
-* Self-awareness: understanding that taking extra time to work on the right thing rather than burning energy on the wrong things generates the most value. I'd like to make a more tangible decision making framework around this (Ex: measuring required tasks at work, deciding which bits take the most time, and working to automate them). This should spill over more generally into other areas of life, most notably how I make time for others. More listening, less speaking!
-* Continued daily habits. Daily unguided meditation and breathwork has been the biggest generator of change so far this year. Hoping to keep this going alongisde daily exercise and building a muscle for continued learning. 
-* Take more risks! Doing more things that scare me than I currently do. Sending cold compliments to people I respect, publishing (poor) writing and getting feedback, and perhaps moving to a new part of the US. Discomfort should apply to my day to day activities rather than fantisizing about large goals (like speaking at large events).
+* Self awareness -  Understanding that taking extra time to work on the right thing rather than burning energy on the wrong things generates the most value. I'd like to make a more tangible decision making framework around this (Ex: measuring required tasks at work, deciding which bits take the most time, and working to automate them). This should spill over more generally into other areas of life, most notably how I make time for others. More listening, less speaking!
+
+* Continued daily habits -  Daily unguided meditation and breathwork has been the biggest generator of change so far this year. Hoping to keep this going alongisde daily exercise and building a muscle for continued learning. Maybe I'll swap a few of my current daily habits out for new ones. I'm focusing more on building dicipline.
+
+* Taking more risks - Doing more things that scare me than I currently do. Sending cold compliments to people I respect, publishing (poor) writing and getting feedback, and perhaps moving to a new part of the US. Discomfort should apply to my day to day activities rather than fantisizing about large goals (like speaking at large events). Ask for feedback way more often than your currently do.
 
 ## On to 2021!
 
-I'm hoping publishing publicly will help to keep the momentum going in 2021! Given I'll hopefully be spending less time inside with predictable routines, keeping this going feels like an exciting challenge. 
+There's no denying this year has been uniquely challenging to most of us, myself included. I'd love to get to know what principles you're focusing on as things become more stable in 2021. 
+
