Trim redundant content

--- a/_posts/2020-12-24-goals2021.md
+++ b/_posts/2020-12-24-goals2021.md
@@ -7,15 +7,13 @@ featured_image: /images/cover.jpg
 ---
 
 ## Principles > Goals  
-As one does around the new year, I've been thinking about why [setting goals](https://paper.dropbox.com/doc/Planning-2020--BB6TsO3lBSskSVrU4MkG14TgAQ-BC2RCXLU0JZMSqPG8fer4) for this year wasn't particularly effective. Last year (and other years before it) I would specify an outcome like gaining X pounds of muscle, speaking at an event with Y attendees, or finishing Z books. While accomplishing a goal was a source of satisfaction, The carrot at the end of the stick was still a carrot. The incentive of accomplishing a goal for its own sake wasn't particularly enticing by comparison to the amount of effort required! I also hadn't spent much time learning about habit formation or adopting a personal philosophy of life (both stil WIP, with most knowledge still coming from pop psycology books and podcasts). 
+As one does around the new year, I've been thinking about why [setting goals](https://paper.dropbox.com/doc/Planning-2020--BB6TsO3lBSskSVrU4MkG14TgAQ-BC2RCXLU0JZMSqPG8fer4) for this year wasn't particularly effective. Last year (and other years before it) I would specify an outcome like gaining X pounds of muscle, speaking at an event with Y attendees, or finishing Z books. While accomplishing a goal was a source of satisfaction, The carrot at the end of the stick was still a carrot. The incentive of accomplishing a goal for its own sake wasn't enticing by comparison to the amount of effort required! I also hadn't spent much time learning about habit formation or adopting a personal philosophy of life (both stil WIP, with most knowledge still coming from pop psychology books and podcasts). 
 
-Around March, I started listening to the ["Invest Like the Best"](https://investorfieldguide.com/podcast/) podcast. It's definitely my favorite podcast of 2020 (if not of all time). Definitely reccomend giving it a listen (and the new sibling series "Founder's Field Guide") if you have a chance. The podcast host writes most of Investor's Field Guide, including the ["Growth Without Goals"](https://investorfieldguide.com/growth-without-goals/) post. It's short and in my opinion, life
+Around March, I started listening to the ["Invest Like the Best"](https://investorfieldguide.com/podcast/). It's my favorite podcast of 2020 (if not of all time). Definitely recommend giving it a listen (and the new sibling series "Founder's Field Guide") if you have a chance. The podcast host writes most of Investor's Field Guide, including the ["Growth Without Goals"](https://investorfieldguide.com/growth-without-goals/) post. It's short and in my opinion, life
 altering. 
 
-The post caused me to think about goals in a way that I never had. Previously, goals were aspirational targets that didn't impact much of my day to day behavior. By comparison, in the last few months of 2020, I've made considerable progress in a few key areas. I'd go so far as saying I have improved general life satisfaction based on this post, even during what most certainly was the weirdest year of most of our lives (myself included).
-
 ## Continuous Success
-In my opinion, the most important point of the post is this image, conveying the idea that you'll feel much happier and more 'succesful' sticking to daily practices, rather than a large goalpost. 
+In my opinion, the most important point of the post is this image, conveying the idea that you'll feel much happier and more 'successful' sticking to daily practices, rather than a large goalpost. 
 
 {% include 
   image.html 
@@ -26,14 +24,14 @@ Adding to this point, there often isn't an incentive to break large goals down i
 
 ## Daily Habits
 
-Given the hypothesis that frequent (daily) activities lead to a feeling of continued success, I've started to pick up a few activities that hopefully morph into habits over time.
+Given the post's hypothesis that frequent (daily) activities lead to a feeling of continued success, I've started to pick up a few activities that hopefully morph into habits over time.
 
 {% include image.html 
   url="/images/20201224/habit-tracker.png"
   description="Daily habit tracking for the last three months"
 %}
 
-The habits themselves don't matter all that much to me at this stage, given I've never stuck to any form of daily ritual. The act of working to improve in the same areas each day continuously has been a source of happines in itself. Even on days when I don't feel particulary motivated to accomplish any of these. Also, the process has resulted in accomplishments that seemed out of reach by comparison to a few months ago! I can't remember the last time I read 10 books in 3 months.
+The habits themselves don't matter all that much to me at this stage, given I've never stuck to any form of daily ritual. The act of working to improve in the same areas each day continuously has been a source of happiness in itself. Even on days when I don't feel motivated to accomplish any of these. Also, the process has resulted in accomplishments that seemed out of reach by comparison to a few months ago! I can't remember the last time I read 10 books in 3 months.
 
 ## Principles
 
@@ -41,11 +39,7 @@ With some foundation in place, I'm hoping to use the momentum to improve my qual
 
 * Self awareness -  Understanding that taking extra time to work on the right thing rather than burning energy on the wrong things generates the most value. I'd like to make a more tangible decision making framework around this (Ex: measuring required tasks at work, deciding which bits take the most time, and working to automate them). This should spill over more generally into other areas of life, most notably how I make time for others. More listening, less speaking!
 
-* Continued daily habits -  Daily unguided meditation and breathwork has been the biggest generator of change so far this year. Hoping to keep this going alongisde daily exercise and building a muscle for continued learning. Maybe I'll swap a few of my current daily habits out for new ones. I'm focusing more on building dicipline.
+* Continued daily habits - Unguided meditation and breathwork have been the biggest generator of change so far this year. I'm hoping to keep it going alongside daily exercise and continued learning. I'll likely swap a few of my current daily habits out for new ones, focusing primarily on building dicipline.
 
-* Taking more risks - Doing more things that scare me than I currently do. Sending cold compliments to people I respect, publishing (poor) writing and getting feedback, and perhaps moving to a new part of the US. Discomfort should apply to my day to day activities rather than fantisizing about large goals (like speaking at large events). Ask for feedback way more often than your currently do.
-
-## On to 2021!
-
-There's no denying this year has been uniquely challenging to most of us, myself included. I'd love to get to know what principles you're focusing on as things become more stable in 2021. 
+* Taking more risks - Doing things that scare me. Sending cold compliments to people I respect, publishing writing and getting feedback, and perhaps moving to a new part of the US. Discomfort should apply to my day-to-day activities rather than fantasizing about large goals (like speaking at large events). Beginning to ask for feedback more often than I currently do.
 
