Remove redundant statement

--- a/_posts/2020-12-24-goals2021.md
+++ b/_posts/2020-12-24-goals2021.md
@@ -13,7 +13,7 @@ Around March, I started listening to the ["Invest Like the Best"](https://invest
 altering. 
 
 ## Continuous Success
-In my opinion, the most important point of the post is this image, conveying the idea that you'll feel much happier and more 'successful' sticking to daily practices, rather than a large goalpost. 
+This image is arguably the most important point of the post. It conveys the idea that you'll feel much happier and more 'successful' sticking to daily practices, rather than a large goalpost. 
 
 {% include 
   image.html 
